<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="false"
    android:layout_centerVertical="true"
    android:background="@android:drawable/picture_frame"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <RelativeLayout
        android:id="@+id/onDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvonDate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/onDate"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etOnDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textSize="24sp"
            tools:ignore="LabelFor,RtlHardcoded,TextFields"
            android:drawableRight="@drawable/ic_date_range_24dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/onDate"
        android:paddingBottom="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvOrder"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Order"
            android:textSize="24sp"
            android:layout_weight="0.82" />

        <Spinner
            android:id="@+id/spOrder"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            android:layout_weight="0.71" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_toRightOf="@id/spOrder"
            android:layout_weight="0.29"
            android:src="@drawable/ic_order_24dp"
            tools:ignore="ContentDescription,ObsoleteLayoutParam,RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newsItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:layout_below="@+id/order"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvNewsItems"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:text="@string/newsItems"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/Arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_art_24dp"
                android:text="@string/check_arts"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />

            <CheckBox
                android:id="@+id/style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_style_24dp"
                android:text="@string/style"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />

            <CheckBox
                android:id="@+id/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_sports_24dp"
                android:text="@string/sports"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_action_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsItems"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center">

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="24sp"
        android:layout_below="@+id/linear_layout_action_buttons"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnOK"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/OK"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/btnBack"
        android:layout_alignBottom="@+id/btnBack"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp" />
</RelativeLayout>
